# basketball_app

./: .coveragerc  .gitignore  pyproject.toml  pytest.ini  readme.md
application/: conftest.py
application/accounts/: admin.py  custom_signal.py  models.py  serializers.py  urls.py  views.py
application/accounts/fixtures/: initial_users.json
application/accounts/management/commands/: create_admin.py
application/accounts/tests/: test_http.py
application/application/: settings.py  urls.py
application/core/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
application/core/management/commands/: import_countries.py
application/core/tests/: test_http.py  test_units.py
application/games/: admin.py  apps.py  models.py  receivers.py  serializers.py  services.py  urls.py  views.py
application/games/management/commands/: import_leagues.py  import_seasons.py  import_teams.py
application/games/tests/: conftest.py  test_http.py  test_units.py
examples/: countries.json  games.json  leagues.json  seasons.json  teams.json
